# docgen

./: .docgen.yml  .gitignore  AGENTS.md  Dockerfile  README.md  README_after_changes.md  README_current.md  README_prev_run.md  README_stub.md  README_with_prompt_echo.md  pyproject.toml  readme_generation_progress.md
.docgen/: embeddings.json  manifest_cache.json  scorecard.json  validation.json
.docgen/analyzers/: cache.json
.github/workflows/: docgen-update.yml
docgen/: __init__.py  analyzer.py  cli.py  config.py  failsafe.py  logging.py  models.py  orchestrator.py  repo_scanner.py
docgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docgen/analyzers/: __init__.py  base.py  build.py  dependencies.py  entrypoints.py  language.py  patterns.py  structure.py  tree_sitter.py  utils.py
docgen/git/: __init__.py  diff.py  publisher.py
docgen/llm/: __init__.py  llamacpp.py  runner.py
docgen/postproc/: __init__.py  badges.py  links.py  lint.py  markers.py  scorecard.py  toc.py
docgen/prompting/: builder.py  constants.py
docgen/rag/: __init__.py  constants.py  embedder.py  indexer.py  store.py
docgen/service/: __init__.py  app.py
docgen/stores/: __init__.py  analyzer_cache.py
docgen/validators/: __init__.py  base.py  no_hallucination.py
docs/ci/: docgen-update.yml  github-actions.md
requirements/: base.txt  dev.txt
spec/: feature_checklist.md  feature_order.md  jira_stories.md  prompt_template.md  spec.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_orchestrator.py  test_repo_scanner.py
tests/_fixtures/: repo_builder.py
(+32 files in other folders)
