[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docgen"
version = "0.1.0"
description = "Local-first README generator driven by repository analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "docgen" }]
dependencies = [
  "jinja2>=3.1.2",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
  "mypy>=1.5.0",
  "black>=24.0.0",
]

[tool.setuptools]
packages = ["docgen"]

[tool.setuptools.package-data]
docgen = [
  "prompting/templates/readme.j2",
  "prompting/templates/sections/*.j2",
]

